# clinkey-cli

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  RELEASE_NOTES.md  cli_test.py  clinkey_view.py  heat.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: quality.yml  security.yml  tests.yml
Formula/: clinkey-cli.rb
clinkey_cli/: cli.py  const.py  logos.py  main.py
clinkey_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clinkey_cli/config/: __init__.py  manager.py
clinkey_cli/generators/: __init__.py  base.py  passphrase.py  pattern.py  syllable.py
clinkey_cli/security/: analyzer.py  breach.py  compliance.py  dictionary.py
clinkey_cli/security/data/: common_passwords.txt
clinkey_cli/wordlists/: eff_large.py
docs/: phase-1-complete.md  phase-2-complete.md  phase-2-security-engine.md  phase-3-enhanced-generators.md  phase-4-cli-integration.md
docs/plans/: 2025-01-26-clinkey-2.0-design.md  2025-01-26-phase-1-foundation.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_backward_compatibility.py  test_cli_e2e.py  test_cli_generation.py
tests/unit/: __init__.py  test_dependencies.py
tests/unit/config/: test_manager.py
tests/unit/generators/: __init__.py  test_base.py  test_passphrase.py  test_pattern.py  test_registry.py  test_syllable.py
tests/unit/security/: __init__.py  test_analyzer.py  test_breach.py  test_compliance.py  test_context.py  test_dictionary.py  test_entropy.py  test_patterns.py
