[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinkey-cli"
version = "2.0.0-beta.2"
description = "A command-line tool for generating strong passwords and secret keys."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Dimitri Gaggioli"}]
keywords = ["password", "generator", "cli", "security"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.3.1",
    "rich>=14.2.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "hypothesis>=6.146.0",
    "black>=25.11.0",
    "isort>=7.0.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pylint>=4.0.3",
    "bandit>=1.9.2",
    "pip-audit>=2.9.0",
]
build = [
    "build>=1.3.0",
]

[project.scripts]
clinkey = "clinkey_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clinkey_cli*"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["clinkey_cli"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["clinkey_cli"]

[tool.pylint.main]
max-line-length = 88
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["clinkey_cli"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
